k8s/k8s-webui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-webui
  labels:
    name: k8s-webui
